# dj-cli-tools

./: .gitignore  MANIFEST.in  README.md  convert_templates.sh  pyproject.toml
dj_cli_tools/: README.rst  apps.py  pyproject.toml
dj_cli_tools/management/commands/: create.py  start_app.py
dj_cli_tools/tests/: test_commands.py
dj_cli_tools/utils/: __init__.py  case_utils.py  code_templates.py  file_handling_mixin.py
dj_templates/rest_version_app_template/: apps.py-tpl  urls.py-tpl
dj_templates/rest_version_app_template/api/v1/: urls.py-tpl  views.py-tpl
dj_templates/simple_drf/: factories.py-tpl
