[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-cli-tools"
version = "0.2"
dependencies = ["django>=5.2"]
description = "A Django app to conduct web-based polls."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">= 3.13"
authors = [{ name = "Abhijith Konnayil", email = "iamabhijith.k@gmail.com" }]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",                       
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/AbhijithKonnayil/dj-cli-tools/"

# Use explicit package discovery to avoid accidentally packaging top-level
# directories such as `templates`. This mirrors setuptools' "find" with
# an include pattern so only the `dj_cli_tools` package (and its subpackages)
# are included in the built distribution.
[tool.setuptools.packages.find]
include = ["dj_cli_tools*", "dj_templates*"]

[tool.setuptools]
include-package-data = true
